welcome.lessons.welcome.instructions.InstructionsDrawG.scala.error
Source:2: error: not found: value baisserbrosse
baisserbrosse()
^Source:18: error: not found: value leverbrosse
leverbrosse
^