welcome.lessons.welcome.instructions.InstructionsDrawG.scala.code
baisserbrosse()
gauche()
gauche()
gauche()
gauche()
recule()
recule()
recule()
droite()
droite()
droite()
droite()
avance()
avance()
gauche()
gauche()
leverbrosse


